--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-phone-number-input": "^3.4.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5"
