--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 secretkey=${SECRETKEY}
 DEFAULT_TTL=86400000
+GEOAPIFY_API_KEY=${GEOAPIFY_API_KEY}
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=3MB
 pexels=${PEXELS}
