--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-62</artifactId>
+            <version>3.7.5</version>
+        </dependency>
     </dependencies>
 
     <build>
