--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=overwatch
 spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=${DATABASE_URL}
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.data.redis.repositories.type = none
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
 
 
 
