--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "async-mutex": "^0.5.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "dompurify": "^3.1.6",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
@@ -25,10 +26,14 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "shiki": "^1.10.3",
+    "shiki-themes": "^0.2.7",
     "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "vscode-textmate": "^9.1.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
