--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -68,7 +68,11 @@ amazon.aws.access-key-id=${AWS_ACCESS_KEY_ID}
 amazon.aws.access-key-secret=${AWS_SECRET_ACCESS_KEY}
 
 
-TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
-TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
 TWILIO_VERIFICATION_SID=${TWILIO_VERIFICATION_SID}
+TWILIO_TEST_ACCOUNT_SID=${TWILIO_TEST_ACCOUNT_SID}
+TWILIO_TEST_AUTH_TOKEN=${TWILIO_TEST_AUTH_TOKEN}
+
+
+
+
 
