feat: be able to add cover photos to cards in todo lists

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,11 +25,11 @@ STRIPE_API_KEY=${STRIPE_API_KEY}
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 secretkey=${SECRETKEY}
+PEXELS_API_KEY=${PEXELS_API_KEY}
 DEFAULT_TTL=86400000
 GEOAPIFY_API_KEY=${GEOAPIFY_API_KEY}
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=3MB
-pexels=${PEXELS}
 
 # spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
