--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-phone-number-input": "^3.4.1",
