--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "dompurify": "^3.1.6",
+    "filesize": "^10.1.6",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
