--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>3.1.3</version>
