--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.0",
     "shiki": "^1.10.3",
     "shiki-themes": "^0.2.7",
     "slate": "^0.103.0",
