feat: turn notifications into emails with the help of redis for queuing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,7 +52,7 @@ logging.level.org.springframework.security=DEBUG
 
 spring.data.web.pageable.one-indexed-parameters=true
 
-
+sendgrid.api.key=${EMAILHOSTPASSWORD}
 spring.mail.host=${EMAILHOST}
 spring.mail.port=${EMAILPORT}
 spring.mail.username=${EMAILHOSTUSER}
