feat: store reviewer connect stripe account id in database and generate an onboarding link for the frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,8 @@ spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.c
 spring.security.oauth2.client.provider.github.user-name-attribute=login
 
 
-
+STRIPE_REFRESH_URL=${STRIPE_REFRESH_URL}
+STRIPE_RETURN_URL=${STRIPE_RETURN_URL}
 STRIPE_API_KEY=${STRIPE_API_KEY}
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
