--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-phone-number-input": "^3.4.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.23.0",
+    "react-spring": "^9.7.4",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.0",
     "shiki": "^1.10.3",
@@ -57,6 +58,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
