--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-core</artifactId>
+            <version>9.0.0</version>
+    <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
