--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-go": "^6.0.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/lang-sql": "^6.8.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
+    "@uiw/react-codemirror": "^4.23.6",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
-    "dompurify": "^3.1.6",
+    "dompurify": "^3.2.2",
     "filesize": "^10.1.6",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
@@ -31,9 +40,10 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.23.0",
     "react-spring": "^9.7.4",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.0",
-    "shiki": "^1.10.3",
+    "shiki": "^1.24.0",
     "shiki-themes": "^0.2.7",
     "slate": "^0.103.0",
     "slate-react": "^0.107.1",
@@ -46,6 +56,7 @@
     "@types/lodash": "^4.17.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
