feat: reviewers can now search for code snippets inside a repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.servlet.multipart.max-request-size=3MB
 spring.jpa.hibernate.ddl-auto=update
 
 spring.main.web-application-type=SERVLET
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=30
