feat: get setup for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,71 +1,1 @@
-spring.application.name=overwatch
-spring.config.import=optional:file:.env[.properties]
-spring.datasource.url=${DATABASE_URL}
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.data.redis.repositories.type = none
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
-
-
-spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
-spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
-spring.security.oauth2.client.registration.github.scope=read:user,repo
-spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:5173/github/success
-spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.github.client-name=GitHub
-
-spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
-spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
-spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
-spring.security.oauth2.client.provider.github.user-name-attribute=login
-
-
-STRIPE_REFRESH_URL=${STRIPE_REFRESH_URL}
-STRIPE_RETURN_URL=${STRIPE_RETURN_URL}
-STRIPE_API_KEY=${STRIPE_API_KEY}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
-secretkey=${SECRETKEY}
-PEXELS_API_KEY=${PEXELS_API_KEY}
-DEFAULT_TTL=86400000
-GEOAPIFY_API_KEY=${GEOAPIFY_API_KEY}
-spring.servlet.multipart.max-file-size=3MB
-spring.servlet.multipart.max-request-size=3MB
-
-# spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
-
-spring.main.web-application-type=SERVLET
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.batch_size=30
-# spring.jpa.properties.hibernate.generate_statistics=true
-
-
-
-logging.level.org.springframework.security=DEBUG
-# logging.level.org.springframework.web=TRACE
-# logging.level.org.springframework.beans.factory=DEBUG
-# logging.level.org.springframework.context=DEBUG
-# logging.level.org.springframework.beans=DEBUG
-# logging.level.org.springframework.web=DEBUG
-
-spring.data.web.pageable.one-indexed-parameters=true
-
-sendgrid.api.key=${EMAILHOSTPASSWORD}
-spring.mail.host=${EMAILHOST}
-spring.mail.port=${EMAILPORT}
-spring.mail.username=${EMAILHOSTUSER}
-spring.mail.password=${EMAILHOSTPASSWORD}
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-amazon.s3.default-bucket=${AWS_BUCKET}
-amazon.aws.access-key-id=${AWS_ACCESS_KEY_ID}
-amazon.aws.access-key-secret=${AWS_SECRET_ACCESS_KEY}
-
-
-TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
-TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
-TWILIO_VERIFICATION_SID=${TWILIO_VERIFICATION_SID}
+spring.profiles.active=dev
