--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ build/
 .env
 .DS_Store
 dump.rdb
-src/main/resources/application-prod.properties
+#src/main/resources/application-prod.properties
 
