deployment:change redis settings

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,9 @@ spring.datasource.url=${DATABASE_URL}
 spring.data.redis.repositories.type = none
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
 app.production.url=https://codeoverwatch.com
+spring.redis.ssl.enabled=true
+spring.redis.ssl.trust-store=classpath:truststore.jks
+spring.redis.ssl.trust-store-password=yourTrustStorePassword
 
 
 
