deployment: switch from stackhero to heroku redis

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=overwatch
 spring.config.import=optional:file:.env[.properties]
-spring.redis.url=${STACKHERO_REDIS_URL_TLS}
+spring.redis.url=${REDIS_URL}
 spring.datasource.url=${DATABASE_URL}
 spring.data.redis.repositories.type = none
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
