fix: redis-connection property

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,12 @@
 spring.application.name=overwatch
 spring.config.import=optional:file:.env[.properties]
-spring.redis.url=${REDIS_URL}
+spring.redis.uri=${REDIS_URL}
 spring.datasource.url=${DATABASE_URL}
 spring.data.redis.repositories.type = none
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
 app.production.url=https://codeoverwatch.com
 spring.redis.ssl=true
+logging.level.org.springframework.data.redis=DEBUG
 
 
 
