deployment: try adding redis password

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,7 +5,8 @@ spring.datasource.url=${DATABASE_URL}
 spring.data.redis.repositories.type = none
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
 app.production.url=https://codeoverwatch.com
-spring.redis.ssl=true
+spring.redis.password=${REDIS_PASSWORD}
+spring.redis.ssl.enabled=true
 logging.level.org.springframework.data.redis=DEBUG
 
 
