--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -40,7 +40,8 @@ spring.servlet.multipart.max-request-size=3MB
 pexels=${PEXELS}
 
 # spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.main.web-application-type=SERVLET
 # spring.jpa.properties.hibernate.generate_statistics=true
 
