--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=overwatch
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:.env.local[.properties]
 spring.datasource.url=${DATABASE_URL}
 spring.redis.host=localhost
 spring.redis.port=6379
