--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
@@ -43,6 +44,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.0",
+    "resize-observer-polyfill": "^1.5.1",
     "shiki": "^1.24.0",
     "shiki-themes": "^0.2.7",
     "slate": "^0.103.0",
@@ -52,6 +54,11 @@
     "vscode-textmate": "^9.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
+    "@mswjs/data": "^0.16.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.1",
     "@types/react": "^18.2.66",
@@ -66,10 +73,13 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jsdom": "^26.1.0",
+    "msw": "^2.7.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-svgr": "^4.3.0",
+    "vitest": "^3.1.2"
   }
 }
